// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview(as Form) snapshot 1`] = `
<div
  style="position: relative; background: rgb(74, 74, 74); overflow-y: auto; width: 1200px; height: 1200px;"
>
  <div
    style="margin: 0px auto; height: 1170px;"
  >
    <div
      style="height: 304.93749999mm; width: 100%; top: 0px; position: absolute;"
    />
    <div
      style="transform: scale(1); transform-origin: center top;"
    >
      <div
        style="font-family: 'Helvetica'; margin: 30px auto; position: relative; background-image: url(data:image/png;base64,a...); background-size: 793.700787411px 1122.5196850527px; width: 793.700787411px; height: 1122.5196850527px;"
      >
        <div>
          <div
            class="selectable"
            id="1"
            style="position: absolute; height: 56.692913386499995px; width: 377.95275591px; top: 75.590551182px; left: 75.590551182px; border: 1px dashed #4af;"
            title="field1"
          >
            <textarea
              placeholder="bb"
              style="padding: 0px; resize: none; position: absolute; font-family: inherit; height: 56.692913386499995px; width: 377.95275591px; text-align: left; font-size: 30pt; letter-spacing: 0pt; line-height: 1em; white-space: pre-line; word-break: break-all; background: transparent; outline: none; color: rgb(0, 0, 0); background-color: transparent;"
              tabindex="100"
            >
              field1
            </textarea>
          </div>
        </div>
        <div>
          <div
            class="selectable"
            id="2"
            style="position: absolute; height: 151.181102364px; width: 377.95275591px; top: 132.2834645685px; left: 75.590551182px; border: 1px dashed #4af;"
            title="field2"
          >
            <div
              style="width: 377.95275591px; height: 151.181102364px; opacity: 1; background-image: none; background-size: 377.95275591px 151.181102364px;"
            >
              <img
                src="field2"
                style="width: 377.95275591px; height: 151.181102364px; border-radius: 0;"
              />
              <button
                aria-label="close"
                style="position: absolute; top: 0px; left: 0px; z-index: 1; display: flex; justify-content: center; align-items: center; color: rgb(51, 51, 51); background: rgb(242, 242, 242); border-radius: 2px; border: 1px solid #767676; cursor: pointer; height: 20px; width: 20px;"
                tabindex="101"
              >
                <img
                  alt="Close icon"
                  src="[object Object]"
                  width="10"
                />
              </button>
            </div>
            <label
              style="display: flex; position: absolute; top: 50%; width: 100%; cursor: pointer;"
            >
              <input
                accept="image/jpeg, image/png"
                tabindex="101"
                type="file"
                value=""
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview(as Viewer) snapshot 1`] = `
<div
  style="position: relative; background: rgb(74, 74, 74); overflow-y: auto; width: 1200px; height: 1200px;"
>
  <div
    style="margin: 0px auto; height: 1170px;"
  >
    <div
      style="height: 304.93749999mm; width: 100%; top: 0px; position: absolute;"
    />
    <div
      style="transform: scale(1); transform-origin: center top;"
    >
      <div
        style="font-family: 'Helvetica'; margin: 30px auto; position: relative; background-image: url(data:image/png;base64,a...); background-size: 793.700787411px 1122.5196850527px; width: 793.700787411px; height: 1122.5196850527px;"
      >
        <div>
          <div
            class="selectable"
            id="1"
            style="position: absolute; height: 56.692913386499995px; width: 377.95275591px; top: 75.590551182px; left: 75.590551182px; border: transparent;"
            title="field1"
          >
            <div
              style="padding: 0px; resize: none; position: absolute; font-family: inherit; height: 56.692913386499995px; width: 377.95275591px; text-align: left; font-size: 30pt; letter-spacing: 0pt; line-height: 1em; white-space: pre-line; word-break: break-all; background: transparent; outline: none; color: rgb(0, 0, 0); background-color: transparent;"
            >
              <span
                style="letter-spacing: inherit;"
              >
                f
              </span>
              <span
                style="letter-spacing: inherit;"
              >
                i
              </span>
              <span
                style="letter-spacing: inherit;"
              >
                e
              </span>
              <span
                style="letter-spacing: inherit;"
              >
                l
              </span>
              <span
                style="letter-spacing: inherit;"
              >
                d
              </span>
              <span
                style="letter-spacing: 0;"
              >
                1
              </span>
            </div>
          </div>
        </div>
        <div>
          <div
            class="selectable"
            id="2"
            style="position: absolute; height: 151.181102364px; width: 377.95275591px; top: 132.2834645685px; left: 75.590551182px; border: transparent;"
            title="field2"
          >
            <div
              style="width: 377.95275591px; height: 151.181102364px; opacity: 1; background-image: none; background-size: 377.95275591px 151.181102364px;"
            >
              <img
                src="field2"
                style="width: 377.95275591px; height: 151.181102364px; border-radius: 0;"
              />
            </div>
            <label
              style="display: none; position: absolute; top: 50%; width: 100%; cursor: pointer;"
            >
              <input
                accept="image/jpeg, image/png"
                tabindex="101"
                type="file"
                value=""
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
